2009-03-01  Niall Power <niall.power@sun.com>

	* VERSION: bump to 0.2.6
	* Makefile: Pick up PYTHON environment variable. Enhancement for
	  fix to 6754650
	* usr/share/time-slider/lib/time_slider/setupgui.py: Allow filesystems
	  to inherit properties from their parent instead of locally tagging
	  every filesystem with the required property setting.
	* usr/share/time-slider/lib/time_slider/zfs.py: Add an "inherit" argument
	  to Filesystem.commit_state() to allow the fileystem to inherit from
	  it's parent when setting the auto-snapshot property.

2009-02-19  Takao Fujiwara  <takao.fujiwara@sun.com>

	* usr/share/time-slider/lib/time_slider/deletegui.py: updated
	the comments because translators are confused it.
	* usr/share/time-slider/lib/time_slider/snapnowui.py: updated
	the gettext "%s" so that translators can change the oder of "%s".

2009-02-05 Niall Power - <niall.power@sun.com>

	* VERSION: bump to 0.2.5
	* Makefile: don't install .pyc files, but generate them as part
	  of "install:" rule. Fixes bugster: 6754650
	* py-compile.py: Prepend "DESTDIR" to compile python bytecode
	  within the installed directory tree.
	* usr/share/time-slider/lib/time_slider/__init__.pyc: removed
	* usr/share/time-slider/lib/time_slider/cleanupmanager.pyc: removed
	* usr/share/time-slider/lib/time_slider/deletegui.pyc: removed
	* usr/share/time-slider/lib/time_slider/fileversion.pyc: removed
	* usr/share/time-slider/lib/time_slider/notification.pyc: removed
	* usr/share/time-slider/lib/time_slider/rbac.pyc: removed
	* usr/share/time-slider/lib/time_slider/setupgui.pyc: removed
	* usr/share/time-slider/lib/time_slider/smfmanager.pyc: removed
	* usr/share/time-slider/lib/time_slider/snapnowui.pyc: removed
	* usr/share/time-slider/lib/time_slider/zfs.pyc: removed
	* usr/share/time-slider/lib/time_slider/zfscontroller.pyc: removed


2009-01-23 Erwann Chenede - <erwann.chenede@sun.com>

	* VERSION: bump version to 0.2.4
	* Makefile : added new files